chore(config): update application configuration